--- a/helm/swingletree/templates/deployment-scotty.yaml
+++ b/helm/swingletree/templates/deployment-scotty.yaml
@@ -1,7 +1,7 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: scotty
+  name: swing-scotty
   labels:
     app: scotty
     chart: {{ template "swingletree.chart" . }}
@@ -26,27 +26,33 @@ spec:
         - name: appkey
           secret:
             secretName: {{ .Release.Name }}-config
+      {{ if .Values.imagePullSecret }}
+      imagePullSecrets:
+        - name: {{ .Values.imagePullSecret }}
+      {{ end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.registry }}:{{ .Values.images.scotty }}"
+          image: "{{ .Values.registry }}{{ .Values.images.scotty }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
+            {{ if .Values.redis.enabled }}
+            - name: SCOTTY_STORAGE_HOST
+              value: "swingletree-cache.{{ .Release.Namespace }}"
+            {{ end }}
             {{ if .Values.redis.password }}
-            - name: STORAGE_PASSWORD
+            - name: SCOTTY_STORAGE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ .Release.Name }}-config
                   key: redis-credential
             {{ end }}
-            - name: SCOTTY_URL
-              value: "http://scotty.{{ .Release.Namespace }}:{{ .Values.swingletree.scotty.port }}"
           volumeMounts:
             - name: config
-              mountPath: /opt/swingletree/swingletree.conf.yaml
+              mountPath: /opt/scotty/swingletree.conf.yaml
               subPath: swingletree.conf.yaml
               readOnly: true
             - name: appkey
-              mountPath: /opt/swingletree/gh-app.pem
+              mountPath: /opt/scotty/gh-app.pem
               subPath: gh-app.pem
           ports:
             - name: http
@@ -54,11 +60,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           resources:
 {{ toYaml .Values.resources | indent 12 }}
