--- a/helm/swingletree/templates/ingress.yaml
+++ b/helm/swingletree/templates/ingress.yaml
@@ -4,9 +4,9 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: gate
   labels:
-    app: {{ template "swingletree.name" . }}
+    app: gate
     chart: {{ template "swingletree.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -26,13 +26,52 @@ spec:
   {{- end }}
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
+  {{- range .Values.ingress.gate.hosts }}
     - host: {{ . }}
       http:
         paths:
-          - path: {{ $ingressPath }}
+          - path: {{ $.Values.ingress.gate.path }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: swing-gate
               servicePort: http
   {{- end }}
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: deck
+  labels:
+    app: deck
+    chart: {{ template "swingletree.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+{{- with .Values.ingress.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
+{{- end }}
+spec:
+{{- if .Values.ingress.tls }}
+  tls:
+  {{- range .Values.ingress.tls }}
+    - hosts:
+      {{- range .hosts }}
+        - {{ . }}
+      {{- end }}
+      secretName: {{ .secretName }}
+  {{- end }}
+{{- end }}
+  rules:
+  {{- range .Values.ingress.deck.hosts }}
+    - host: {{ . }}
+      http:
+        paths:
+          - path: {{ $.Values.ingress.deck.path }}
+            backend:
+              serviceName: swing-deck
+              servicePort: http
+  {{- end }}
+
+
 {{- end }}
