dev: prepare helm charts

--- a/helm/swingletree/templates/deployment-deck.yaml
+++ b/helm/swingletree/templates/deployment-deck.yaml
@@ -34,6 +34,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.registry }}{{ .Values.images.deck }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
+          env:
+            - name: LOG_LEVEL
+              value: {{ .Values.log.level }}
           volumeMounts:
             - name: config
               mountPath: /opt/deck/swingletree.conf.yaml
