--- a/helm/swingletree/templates/deployment-plugin-nebula.yaml
+++ b/helm/swingletree/templates/deployment-plugin-nebula.yaml
@@ -35,8 +35,12 @@ spec:
           image: "{{ .Values.registry }}{{ .Values.images.plugin.nebula }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
+            - name: NEBULA_URLS_SCOTTY
+              value: "http://swing-scotty.{{ .Release.Namespace }}:{{ .Values.swingletree.scotty.port }}"
             - name: SCOTTY_CLIENT_URL
               value: "http://swing-scotty.{{ .Release.Namespace }}:{{ .Values.swingletree.scotty.port }}"
+            - name: LOG_LEVEL
+              value: {{ .Values.log.level }}
           volumeMounts:
             - name: config
               mountPath: /opt/plugin-nebula/swingletree.conf.yaml
