--- a/helm/swingletree/templates/secret.yaml
+++ b/helm/swingletree/templates/secret.yaml
@@ -1,11 +1,11 @@
+{{- $config := include "swingletree.config" . -}}
+
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-config
 type: Opaque
 stringData: 
-  swingletree.conf.yaml: {{ toYaml .Values.swingletree | quote }}
+  swingletree.conf.yaml: {{ $config | quote }}
   gh-app.pem: {{ .Values.github_app_key | quote }}
-  {{ if .Values.redis.password }}
-  redis-credential: {{ .Values.redis.password }}
-  {{ end }}
+  
