--- a/helm/swingletree/templates/deployment-plugin-twistlock.yaml
+++ b/helm/swingletree/templates/deployment-plugin-twistlock.yaml
@@ -35,12 +35,8 @@ spec:
           image: "{{ .Values.registry }}{{ .Values.images.plugin.twistlock }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
-            - name: SCOTTY_CLIENT_URL
-              value: "http://swing-scotty.{{ .Release.Namespace }}:{{ .Values.swingletree.scotty.port }}"
             - name: LOG_LEVEL
               value: {{ .Values.log.level }}
-            - name: TWISTLOCK_URLS_SCOTTY
-              value: "http://swing-scotty.{{ .Release.Namespace }}:{{ .Values.swingletree.scotty.port }}"
           volumeMounts:
             - name: config
               mountPath: /opt/plugin-twistlock/swingletree.conf.yaml
@@ -48,7 +44,7 @@ spec:
               readOnly: true
           ports:
             - name: http
-              containerPort: {{ .Values.swingletree.twistlock.port }}
+              containerPort: 3000
               protocol: TCP
           livenessProbe:
             httpGet:
