--- a/helm/swingletree/templates/deployment-scotty.yaml
+++ b/helm/swingletree/templates/deployment-scotty.yaml
@@ -35,17 +35,6 @@ spec:
           image: "{{ .Values.registry }}{{ .Values.images.scotty }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
-            {{ if .Values.redis.enabled }}
-            - name: SCOTTY_STORAGE_HOST
-              value: "{{ .Values.redis.fullnameOverride }}-master.{{ .Release.Namespace }}"
-            {{ end }}
-            {{ if .Values.redis.password }}
-            - name: SCOTTY_STORAGE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Release.Name }}-config
-                  key: redis-credential
-            {{ end }}
             - name: LOG_LEVEL
               value: {{ .Values.log.level }}
           volumeMounts:
@@ -58,7 +47,7 @@ spec:
               subPath: gh-app.pem
           ports:
             - name: http
-              containerPort: {{ .Values.swingletree.scotty.port }}
+              containerPort: 3000
               protocol: TCP
           livenessProbe:
             httpGet:
