--- a/helm/swingletree/values.yaml
+++ b/helm/swingletree/values.yaml
@@ -1,9 +1,78 @@
-# Default values for swingletree.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Swingletree HELM configuration
+
+## ElasticSearch configuration (history not available if disabled)
+elastic:
+  enabled: false
+  node: http://localhost:9200
+  index: swingletree
+  auth: # elastic nodejs auth object
+    username:
+    password:
+    apiKey:
+
+## Redis configuration
+redis:
+  password: # set your database password with this value
+
+## GitHub configuration
+github:
+  app:
+    id: # The AppId of your GitHub app instance (not installation!)
+    page: # the GitHub App public page. Will be referenced in the Swingletree landing page.
+    keyfile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
+  base: https://api.github.com # Github Api base url
+  secret: # this is the webhook secret. You should set it.
+  debug: false # runs octokit in debug mode. Use this only for debug, since this can reveal secret tokens in the logs!
+
+## SonarQube configuration
+sonar:
+  base: # SonarQube base url
+  token: # SonarQube Server API token
+
+## Enabled plugins
+plugins:
+  - twistlock
+  - zap
+  - sonarqube
+  - nebula
+
+## Feature flags
+features:
+  dashboard: true
+
+## Swingletree core service configuration
+### deck configuration
+deck:
+  path: # set this to the reverse proxy path, if deck is running behind a path in a reverse proxy
+
+### gate configuration
+gate:
+  api:
+    token: # authentication secret for gate plugin endpoints. Set this.
+
+### scotty configuration
+scotty: # not needed yet :)
+
+
+## Plugin configuration
+nebula:
+  context: gradle/nebula
+zap:
+  context: security/zap
+twistlock:
+  context: security/twistlock
+sonar:
+  context: sonarqube
+
+
+
+#######################################################################################
+# Advanced section
+#--------------------------------------------------------------------------------------
 
 replicaCount: 1
 
+# images to use for this deployment
 images:
   deck: deck/deck:1.1.0
   gate: gate/gate:1.0.2
@@ -17,112 +86,39 @@ pullPolicy: IfNotPresent
 registry: docker.pkg.github.com/swingletree-oss/
 imagePullSecret: regcred
 
+# default service configuration
 service:
   type: ClusterIP
   port: 3000
 
 # github app key file content
-github_app_key: # set using `--set-file github_app_key=/path/to/file` when running helm
+github_app_key: # set using the bake.sh option --gh-keyfile
 
+# log level of all swingletree pods
 log:
-  level: debug
+  level: info
 
-swingletree: # swingletree configuration
-
-  deck: # deck configuration
-    port: 3000
-    path: "/deck"
-    elastic:
-      enabled: false
-      node: http://localhost:9200
-      auth: # elastic nodejs auth object
-        username:
-        password:
-        apiKey:
-      index: swingletree
-    features:
-      dashboard: true
-    github:
-      page: # the GitHub App public page. Will be referenced in the Swingletree landing page.
-
-  gate:
-    port: 3000
-    api:
-      token: abc
-    plugins:
-      - id: twistlock
-        base: "http://plugin-twistlock.default:3000"
-      - id: zap
-        base: "http://plugin-zap.default:3000"
-      - id: sonarqube
-        base: "http://plugin-sonar.default:3000"
-      - id: nebula
-        base: "http://plugin-nebula.default:3000"
-        
-  scotty:
-    port: 3000
-    storage: # storage configuration
-      host: localhost # database host
-      password: # database password
-    elastic:
-      enabled: false
-      node: http://localhost:9200
-      auth: # elastic nodejs auth object
-        username:
-        password:
-        apiKey:
-      index: swingletree
-    github: # GitHub specific configuration
-      app:
-        id: # The AppId of your GitHub app instance (not installation!)
-        page: # the GitHub App public page. Will be referenced in the Swingletree landing page.
-        keyfile: gh-app.pem # the key file of your GitHub App (you retrieve this from the App settings page)
-      base: https://api.github.com # Github Api base url
-      secret: # this is the webhook secret. You should set it.
-      debug: false # runs octokit in debug mode. Use this only for debug, since this can reveal secret tokens in the logs!
-
-  nebula:
-    context: gradle/nebula # defines the check status name
-    debug: false # log zap webhook event requests on debug level
-    port: 3000
-
-  zap:
-    context: security/zap # defines the check status name
-    debug: false # log zap webhook event requests on debug level
-    port: 3000
-
-  twistlock:
-    context: security/twistlock
-    port: 3000
-
-  sonar:
-    port: 3000
-    secret: # basic auth password protecting the webhook
-    base: # SonarQube base url
-    context: sonarqube # defines the check status name
-    token: # API token
-    debug: false # log SonarQube webhook event requests on debug level
-
+# redis dependency configuration
 redis: # stable/redis
   enabled: true
   cluster:
     enabled: false
   fullnameOverride: swingletree-cache
-  password: sjsfgkaseciubjh2 # set your database password with this value
 
+# ingress configuration
 ingress:
   enabled: true
   deck:
-    path: /deck(/|$)(.*)
+    path: /
     hosts:
-      - minikube
+      - swingletree.minikube
   gate:
-    path: /gate(/|$)(.*)
+    path: /
     hosts:
-      - minikube
+      - gate,swingletree.minikube
 
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/rewrite-target: /$2
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
 
