--- a/helm/swingletree/templates/deployment-plugin-nebula.yaml
+++ b/helm/swingletree/templates/deployment-plugin-nebula.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.nebula.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -68,3 +69,4 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
+{{- end }}
