docs: improve documentation

--- a/docs/_data/docs.yml
+++ b/docs/_data/docs.yml
@@ -1,8 +1,13 @@
 - title: General
   docs:
   - home
-  - installation
   - yoke-cli
+
+- title: Installation
+  docs:
+  - install/prerequisites
+  - install/prepare
+  - install/k8s
 
 - title: Components
   docs:
