--- a/helm/swingletree/templates/deployment-plugin-twistlock.yaml
+++ b/helm/swingletree/templates/deployment-plugin-twistlock.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.twistlock.enabled -}}
+{{- if .Values.plugins.twistlock.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
