--- a/helm/swingletree/values.yaml
+++ b/helm/swingletree/values.yaml
@@ -69,6 +69,9 @@ plugins:
   sonar:
     enabled: true
     context: sonarqube
+  testng:
+    enabled: true
+    context: test/testng
 
 # ingress configuration
 ingress:
