feat(plugin-testng): add plugin supporting testng xml reports

--- a/helm/swingletree/values.yaml
+++ b/helm/swingletree/values.yaml
@@ -109,6 +109,7 @@ images:
     sonar: plugin-sonarqube/plugin-sonarqube:1.1.2
     twistlock: plugin-twistlock/plugin-twistlock:1.1.2
     zap: plugin-zap/plugin-zap:1.1.2
+    testng: plugin-testng/plugin-testng:1.0.0
 pullPolicy: IfNotPresent
 registry: docker.pkg.github.com/swingletree-oss/
 #imagePullSecret: regcred
