--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -5,14 +5,5 @@ npmPublish: false
 plugins:
 - "@semantic-release/commit-analyzer"
 - "@semantic-release/release-notes-generator"
-- ["@semantic-release/exec", {
-    "publishCmd": "./.release.sh ${nextRelease.version}"
-  }]
-- [ "@semantic-release/github", {
-      "assets": [
-        {
-          "path": "helm/dist/swingletree-*.tgz",
-          "label": "helm chart"
-        }
-      ]
-  ]
+- ["@semantic-release/exec", {"publishCmd": "./.release.sh ${nextRelease.version}"}]
+- ["@semantic-release/github", {"assets": [{"path": "helm/dist/swingletree-*.tgz", "label": "helm chart"}]}]
