--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: '13.x'
     - name: Install Git
-      run: apk add git
+      run: apk add --no-cache git nodejs nodejs-npm
     - name: Initialize
       run: npm i
     - name: Release Codebase
