--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -7,12 +7,10 @@ on:
 
 jobs:
   release:
-    runs-on: alpine/helm:2.16.1
+    container:
+      image: alpine/helm:2.16.1
     steps:
-    - uses: actions/setup-node@v1
     - uses: actions/checkout@v1
-      with:
-        node-version: '13.x'
     - name: Install Git
       run: apk add --no-cache git nodejs nodejs-npm
     - name: Initialize
