docs: set correct language

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,7 @@ title: Swingletree
 email: 
 description:  >-
   Swingletree is a GitHub App enabling you to integrate and observe the results of your CI/CD pipeline tools
-lang: de-DE
+lang: en-US
 
 logo: assets/images/icon.svg
 
