--- a/helm/swingletree/values.yaml
+++ b/helm/swingletree/values.yaml
@@ -101,15 +101,30 @@ replicaCount: 1
 
 # images to use for this deployment
 images:
-  deck: deck/deck:1.3.0
-  gate: gate/gate:1.3.0
-  scotty: scotty/scotty:1.0.5
-  plugin:
-    nebula: plugin-nebula/plugin-nebula:1.1.2
-    sonar: plugin-sonarqube/plugin-sonarqube:1.1.2
-    twistlock: plugin-twistlock/plugin-twistlock:1.1.2
-    zap: plugin-zap/plugin-zap:1.1.2
-    testng: plugin-testng/plugin-testng:1.0.0
+  deck:
+    repo: deck/deck
+    version: 1.3.0                 #deck_VERSION
+  gate:
+    repo: gate/gate
+    version: 1.3.0                 #gate_VERSION
+  scotty:
+    repo: scotty/scotty
+    version: 1.0.5                 #scotty_VERSION
+  plugin-nebula:
+    repo: plugin-nebula/plugin-nebula
+    version: 1.1.2                 #plugin-nebula_VERSION
+  plugin-sonarqube:
+    repo: plugin-sonarqube/plugin-sonarqube
+    version: 1.1.2                 #plugin-sonarqube_VERSION
+  plugin-twistlock:
+    repo: plugin-twistlock/plugin-twistlock
+    version: 1.1.2                 #plugin-twistlock_VERSION
+  plugin-zap:
+    repo: plugin-zap/plugin-zap
+    version: 1.1.2                 #plugin-zap_VERSION
+  plugin-testng:
+    repo: plugin-testng/plugin-testng
+    version: 1.0.0                 #plugin-testng_VERSION
 pullPolicy: IfNotPresent
 registry: docker.pkg.github.com/swingletree-oss/
 #imagePullSecret: regcred
