--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,25 @@ services:
       - "9200"
       - "9300"
 
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.3.1
+    environment:
+      ELASTICSEARCH_HOSTS: http://elastic:9200
+    ports:
+      - "5601:5601"
+    expose:
+      - "5601"
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    logging:
+      driver: none
+    ports:
+      - "9000:3000"
+    expose:
+      - "9000"
 
   plugin-nebula:
     container_name: plugin-nebula
