chore: improve docker-compose for dev purposes

--- a/compose.env
+++ b/compose.env
@@ -6,3 +6,5 @@ SCOTTY_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_ENABLED=true
 DECK_ELASTIC_NODE=http://elastic:9200
 DECK_ELASTIC_FEATURES_DASHBOARD=true
+
+SONAR_BASE=http://sonarqube:9000/
