--- a/helm/swingletree/templates/deployment-plugin-twistlock.yaml
+++ b/helm/swingletree/templates/deployment-plugin-twistlock.yaml
@@ -33,7 +33,7 @@ spec:
       {{ end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.registry }}{{ .Values.images.plugin-twistlock.repo }}:{{ .Values.images.plugin-twistlock.version }}"
+          image: "{{ $pluginTwistlock := index .Values.images "plugin-twistlock" }}{{ .Values.registry }}{{ $pluginTwistlock.repo }}:{{ $pluginTwistlock.version }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
             - name: LOG_LEVEL
