--- a/helm/swingletree/templates/deployment-plugin-zap.yaml
+++ b/helm/swingletree/templates/deployment-plugin-zap.yaml
@@ -33,7 +33,7 @@ spec:
       {{ end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.registry }}{{ .Values.images.plugin-zap.repo }}:{{ .Values.images.plugin-zap.version }}"
+          image: "{{ $pluginZap := index .Values.images "plugin-zap" }}{{ .Values.registry }}{{ $pluginZap.repo }}:{{ $pluginZap.version }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
             - name: LOG_LEVEL
