--- a/helm/swingletree/templates/deployment-plugin-sonar.yaml
+++ b/helm/swingletree/templates/deployment-plugin-sonar.yaml
@@ -23,10 +23,10 @@ spec:
       volumes:
         - name: config
           secret:
-            secretName: {{ .Release.Name }}-config
+            secretName: swingletree-config
         - name: appkey
           secret:
-            secretName: {{ .Release.Name }}-config
+            secretName: swingletree-config
       {{ if .Values.imagePullSecret }}
       imagePullSecrets:
         - name: {{ .Values.imagePullSecret }}
