--- a/helm/swingletree/templates/secret.yaml
+++ b/helm/swingletree/templates/secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-config
+  name: swingletree-config
 type: Opaque
 stringData: 
   swingletree.conf.yaml: {{ $config | quote }}
