fix(helm): run redis without persistent storage claims

--- a/helm/swingletree/values.yaml
+++ b/helm/swingletree/values.yaml
@@ -19,6 +19,16 @@ redis:
   cluster:
     enabled: false
   fullnameOverride: swingletree-cache
+  image:
+    registry: docker.io
+  persistence:
+    enabled: false
+  master:
+    persistence:
+      enabled: false
+  slave:
+    persistence:
+      enabled: false
 
 
 ## GitHub configuration
